--- a/style.css
+++ b/style.css
@@ -7,12 +7,9 @@ h5, p {
 body {
   font-family: "Outfit", sans-serif;
   background-color: hsl(212deg, 45%, 89%);
-  display: flex;
-  justify-content: center;
-  align-content: center;
   padding: 0;
   margin: 0;
-  margin-top: 25vh;
+  min-height: 100vh;
 }
 
 .container {
@@ -20,11 +17,12 @@ body {
   width: 200px;
   height: auto;
   border-radius: 10px;
+  box-shadow: 5px 5px 18px 0px lightslategrey;
+  margin-top: 25vh;
   padding: 0.8em;
   padding-top: 0.6em;
-  box-shadow: 5px 5px 18px 0px lightslategrey;
 }
-.container__img img {
+.container img {
   border-radius: 10px;
   width: 100%;
   max-height: 50%;
