--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,34 +9,38 @@ h5, p {
 body {
     font-family: $font-stack;
     background-color: $light-gray;
-    display: flex;
-    justify-content: center;
-    align-content: center;
     padding: 0;
-    margin: 0 {
-        top: 25vh
-    };
+    margin: 0;
+    min-height: 100vh
 }
 
 .container {
+    // display: flex;
+    // justify-content: center;
+    // align-content: center;
     background-color: $white;
     width: 200px;
     height: auto;
     border-radius: 10px;
+    box-shadow: 5px 5px 18px 0px lightslategrey;
+    margin: {
+        top: 25vh
+    };
     padding: 0.8em {
         top: 0.6em
     };
-    box-shadow: 5px 5px 18px 0px lightslategrey;
 
-    &__img {
-        img{
-            border-radius: 10px;
-            width: 100%;
-            max-height: 50%;
-            margin: 0;
-        }
 
+
+
+
+    img{
+        border-radius: 10px;
+        width: 100%;
+        max-height: 50%;
+        margin: 0;
     }
+
 
     &__text {
         width: 95%;
