--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap");
-h5, p {
+h5, p, * {
   margin: 0;
   padding: 0;
 }
@@ -7,38 +7,40 @@ h5, p {
 body {
   font-family: "Outfit", sans-serif;
   background-color: hsl(212deg, 45%, 89%);
-  padding: 0;
-  margin: 0;
-  min-height: 100vh;
 }
 
-.container {
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  margin: auto;
+}
+main .container {
   background-color: hsl(0deg, 0%, 100%);
-  width: 200px;
-  height: auto;
+  width: 15rem;
   border-radius: 10px;
   box-shadow: 5px 5px 18px 0px lightslategrey;
-  margin-top: 25vh;
   padding: 0.8em;
   padding-top: 0.6em;
 }
-.container img {
+main .container img {
   border-radius: 10px;
-  width: 100%;
-  max-height: 50%;
+  width: 15rem;
+  max-height: 20rem;
   margin: 0;
 }
-.container__text {
-  width: 95%;
+main .container__text {
+  width: 14rem;
   text-align: center;
 }
-.container__text__emphasis {
-  font-size: 15px;
+main .container__text__emphasis {
+  font-size: 1rem;
   font-weight: 600;
   color: hsl(218deg, 44%, 22%);
   margin: 12px 0;
 }
-.container__text__info {
+main .container__text__info {
   font-size: 12px;
   color: hsl(220deg, 15%, 55%);
   margin-bottom: 12px;
