--- a/styles/main.scss
+++ b/styles/main.scss
@@ -39,6 +39,7 @@ main {
         &__text {
             width: 14rem;
             text-align: center;
+            margin: auto;
 
             &__emphasis {
                 font-size: 1rem;
